--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "sass --watch src/styles.scss dist/styles.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,6 +12,7 @@
   "devDependencies": {
     "csslint": "^1.0.5",
     "htmlhint": "^0.11.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "sass": "^1.25.0"
   }
 }
